# token-memproof

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
dnas/gated_dna/workdir/: dna.yaml
dnas/gated_dna/zomes/coordinator/gated_dna/: Cargo.toml
dnas/gated_dna/zomes/coordinator/gated_dna/src/: all_posts.rs  lib.rs  post.rs  properties.rs
dnas/gated_dna/zomes/integrity/gated_dna/: Cargo.toml
dnas/gated_dna/zomes/integrity/gated_dna/src/: lib.rs  post.rs
dnas/lobby/workdir/: dna.yaml
dnas/lobby/zomes/coordinator/lobby/: Cargo.toml
dnas/lobby/zomes/coordinator/lobby/src/: all_lobbies.rs  evm_key_binding.rs  lib.rs  token_gated_room.rs
dnas/lobby/zomes/integrity/lobby/: Cargo.toml
dnas/lobby/zomes/integrity/lobby/src/: evm_key_binding.rs  lib.rs  token_gated_room.rs
tests/src/gated_dna/gated_dna/: all-posts.test.ts  common.ts  post.test.ts
tests/src/lobby/lobby/: all-lobbies.test.ts  common.ts  evm-key-binding.test.ts  token-gated-room.test.ts
ui/: package.json  tailwind.config.cjs
ui/src/: App.svelte  ConnectWallet.svelte  app.postcss  contexts.ts
ui/src/gated_dna/gated_dna/: AllPosts.svelte  CreateClone.svelte  CreatePost.svelte  EditPost.svelte  PostDetail.svelte  types.ts
ui/src/lib/: utils.ts
ui/src/lib/evm_key_binding/: index.ts
ui/src/lib/fetch_proof/: index.ts
ui/src/lib/snackbar/: Snackbar.svelte
ui/src/lobby/lobby/: AllLobbies.svelte  CreateEvmKeyBinding.svelte  CreateTokenGatedRoom.svelte  EvmKeyBindingDetail.svelte  TokenGatedRoomDetail.svelte  types.ts
workdir/: happ.yaml  web-happ.yaml
