[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.3"
hdk = "=0.1.3"
serde = "1"
ethers-signers = { version = "2.0.4"}

[workspace.dependencies.gated_dna]
path = "dnas/gated_dna/zomes/coordinator/gated_dna"

[workspace.dependencies.gated_dna_integrity]
path = "dnas/gated_dna/zomes/integrity/gated_dna"

[workspace.dependencies.lobby]
path = "dnas/lobby/zomes/coordinator/lobby"

[workspace.dependencies.lobby_integrity]
path = "dnas/lobby/zomes/integrity/lobby"
